XRENDERING-655: Add the ability to style image captions (#215)
- Introduce the FigureTypeRecognizerMacro
- Use FigureTypeRecognizerMacro in FigureMacro
- Test updated in xwiki-macro-rendering-figure and xwiki-rendering-syntax-html5